5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3396/executions/1861_2176.log
== TEST (2019-06-26 18:42:52) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat= array(eval([0, 0], [0, 0]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:45:47) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= [[0, 0], [0, 1], [1, 0], [1, 1]]
for l in range

-- ERROR:
File "XXXX", line 5
    for l in range
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:46:52) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= [[0, 0], [0, 1], [1, 0], [1, 1]]
for l in range(0, 2):
	for c in range(2, 0)

-- ERROR:
File "XXXX", line 6
    for c in range(2, 0)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:47:01) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= [[0, 0], [0, 1], [1, 0], [1, 1]]
for l in range(0, 2):
	for c in range(1, 0)

-- ERROR:
File "XXXX", line 6
    for c in range(1, 0)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:47:12) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= [[0, 0], [0, 1], [1, 0], [1, 1]]
for l in range(0, 2):
	for c in range(1, 0):

-- ERROR:
File "XXXX", line 7
    
                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:48:57) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= [[0, 0], [0, 1], [1, 0], [1, 1]]
for l in range(0, 2):



-- ERROR:
File "XXXX", line 8
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:49:40) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat= [[0, 0], [0, 1], [1, 0], [1, 1]]
for l in range(0, 2):
	v= float(input("digite mat:"))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:50:17) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat= [[0, 0], [0, 1], [1, 0], [1, 1]]
print(mat)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:51:35) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat= [[0, 0], [0, 1], [1, 0], [1, 1]]
print(mat)
for i in range(0, 2):




-- ERROR:
File "XXXX", line 9
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:51:45) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat= [[0, 0], [0, 1], [1, 0], [1, 1]]
for i in range(0, 2):




-- ERROR:
File "XXXX", line 8
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:51:56) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat= [[0, 0], [0, 1], [1, 0], [1, 1]]
for i in range(0, 2):




-- EXECUTION TIME:
0.712212
-- ERROR:
  File "/home/codebench/codes/1861/2176/main.py", line 8
    
    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:58:35) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat= [[0, 0], [0, 1], [1, 0], [1, 1]]
for i in range(0, 2):
	i= float(input("digite i:"))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:00:38) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat= [[0, 0], [0, 1], [1, 0], [1, 1]]
for i in range(0, 2):
	i= float(input("digite i:"))
	for j in range(0, 2):
		j= float("digite j:")




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:01:16) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat= [[0, 0], [0, 1], [1, 0], [1, 1]]
for i in range(0, 2):
	i= float(input("digite i:"))
	for j in range(1, 2):
		j= float("digite j:")




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:02:07) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat= [[0, 0], [0, 1], [1, 0], [1, 1]]
for i in range(0, 2):
	i= float(input("digite i:"))
	for j in range(1, 2):
		j= float(input("digite j:"))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:02:43) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat= [[0, 0], [0, 1], [1, 0], [1, 1]]
for i in range(0, 2):
	i= float(input("digite i:"))
	for j in range(1, 2):
		j= float(input("digite j:"))
		print(mat)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:03:39) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat= [[0, 0], [0, 1], [1, 0], [1, 1]]
for i in range(0, 2):
	i= float(input("digite i:"))
	for j in range(1, 2):
		j= float(input("digite j:"))
		print(mat)[i][j]




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:04:00) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat= [[0, 0], [0, 1], [1, 0], [1, 1]]
for i in range(0, 2):
	i= float(input("digite i:"))
	for j in range(1, 2):
		j= float(input("digite j:"))
		print[i][j]




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:04:42) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat= [[0, 0], [0, 1], [1, 0], [1, 1]]
for i in range(0, 2):
	i= float(input(f"digite i:"))
	for j in range(1, 2):
		j= float(input(f"digite j:"))
		print




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:06:10) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat= array(eval([],[])
for i in range(0, 2):
	i= float(input("digite i:"))
	for j in range(1, 2):
		j= float(input("digite j:"))
		print




-- ERROR:
File "XXXX", line 4
    for i in range(0, 2):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:06:31) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat= array(eval([],[])





-- ERROR:
File "XXXX", line 8
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:07:10) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat= array(eval([0, 0], [0, 0]))





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:13:01) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz= array(eval[[ , ], [ , ]])





-- ERROR:
File "XXXX", line 3
    matriz= array(eval[[ , ], [ , ]])
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:13:51) 
-- CODE:
from numpy import*
m= array(eval("digite m:"))





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:14:40) 
-- CODE:
from numpy import*
from numpy.linalg import*
m= array(eval("digite []:"))





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:15:29) 
-- CODE:
from numpy import*
from numpy.linalg import*
m= array(eval[])





-- ERROR:
File "XXXX", line 3
    m= array(eval[])
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 19:17:36) 
-- CODE:
from numpy import*
from numpy.linalg import*
m= array





-- EXECUTION TIME:
1.06256
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
40.0
---- user output:

-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.89
---- user output:

-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
98.9
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
